Update: Updated all the wievs
-Updated Views
-Removed Debug option form navbar
-Updated Admin Panel
-Added 4 new images
-Major Redesigns to all views

--- a/src/main/resources/templates/about_us.html
+++ b/src/main/resources/templates/about_us.html
@@ -19,10 +19,31 @@
 
 <main>
     <div class="container my-5">
-        <div>
-            Tu będzie krótka historia portu (skopiowana z wikipedii)
+        <div class="d-flex justify-content-center m-3">
+            O Porcie Morskim Świnoujście słów kilka:
         </div>
+        <p class="lead m-3">
+            Port Morski w Świnoujściu to jedno z najważniejszych strategicznie miejsc na mapie Polski, stanowiące bramę morską do Bałtyku. Znajduje się on na północno-zachodnim krańcu Polski, na wyspie Uznam, która oddziela Zalew Szczeciński od Morza Bałtyckiego. To dynamicznie rozwijające się centrum logistyczne i przemysłowe, spełniające istotną rolę w transporcie morskim i handlu.
+        </p>
+        <p class="lead m-3">
+            Port ten jest nie tylko kluczowym węzłem dla gospodarki Polski, ale także dla Europy Środkowej, umożliwiając skuteczny transport towarów do i z obszaru bałtyckiego. Znajduje się tu wiele terminali przeładunkowych, magazynów oraz infrastruktura potrzebna do obsługi różnorodnych rodzajów ładunków.
+        </p>
     </div>
+
+    <div class="container my-5">
+        <div class="d-flex justify-content-center m-3">
+            Krótka historia Portu Świnoujście:
+        </div>
+        <p class="lead m-3">
+            Historia Portu Morskiego w Świnoujściu sięga XIX wieku, gdy miasto było częścią Królestwa Pruskiego. Już wówczas, ze względu na strategiczne położenie na szlaku wodnym łączącym Zalew Szczeciński z Morzem Bałtyckim, zaczęły się plany rozbudowy portu. Rozwój portu przyspieszył po I wojnie światowej, kiedy Świnoujście stało się częścią niepodległej Polski.        </p>
+        <p class="lead m-3">
+            W okresie międzywojennym port rozwijał się, obsługując coraz większą liczbę statków i ładunków. Podczas II wojny światowej port był miejscem strategicznego znaczenia, co skutkowało intensywnymi działaniami wojennymi i zniszczeniami. Po wojnie, w okresie Polski Ludowej, rozpoczęły się prace nad odbudową i modernizacją portu.
+        </p>
+        <p class="lead m-3">
+            W latach 90. XX wieku, po transformacji ustrojowej, port zaczął się rozwijać gospodarczo. Inwestycje w nowoczesną infrastrukturę, rozbudowę terminali i modernizację urządzeń umożliwiły mu stanie się jednym z najważniejszych portów morskich w Polsce i Europie. Dziś Świnoujście to nie tylko ośrodek gospodarczy, ale także miejsce, które przyciąga turystów, z uwagi na urok miasta-portu i piękne plaże na wyspie Uznam.
+        </p>
+    </div>
+
 </main>
 
 <footer>
