--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -19,8 +19,64 @@
 
 <main>
   <div class="container my-5">
-    <div>
-      Tu będzie kontakt z biurem portu
+    <div class="d-flex justify-content-center">
+      <p class>
+      Jeśli masz pytania, uwagi lub potrzebujesz dodatkowych informacji, skontaktuj się z nami. Poniżej znajdziesz wszelkie niezbędne dane kontaktowe.
+    </p>
+    </div>
+  </div>
+  <div class="container my-5">
+    <div class="card-deck">
+      <div class="card text-light bg-info">
+        <div class="card-header">
+          <div class="d-flex justify-content-center">
+            Adres
+          </div>
+        </div>
+        <div class="list-group list-group-flush text-dark">
+          <li class="list-group-item">Port Morski Świnoujście S.A.</li>
+          <li class="list-group-item">ul. Żeromskiego 54</li>
+          <li class="list-group-item">72-600 Świnoujście</li>
+          <li class="list-group-item">Polska</li>
+        </div>
+        <div class="card-footer">
+          <div class="d-flex justify-content-center"></div>
+        </div>
+      </div>
+
+      <div class="card text-light bg-info">
+        <div class="card-header">
+          <div class="d-flex justify-content-center">
+            Dane kontaktowe
+          </div>
+        </div>
+        <div class="list-group list-group-flush text-dark">
+          <li class="list-group-item">Telefon:</li>
+          <li class="list-group-item">+48 111 222 333</li>
+          <li class="list-group-item">Email:</li>
+          <li class="list-group-item">kontakt@port-swinoujscie.pl</li>
+        </div>
+        <div class="card-footer">
+          <div class="d-flex justify-content-center"></div>
+        </div>
+      </div>
+
+      <div class="card text-light bg-info">
+        <div class="card-header">
+          <div class="d-flex justify-content-center">
+            Godziny Otwarcia Biura
+          </div>
+        </div>
+        <div class="list-group list-group-flush text-dark">
+          <li class="list-group-item">Poniedziałek - Piątek:</li>
+          <li class="list-group-item">8:00 - 16:00</li>
+          <li class="list-group-item">Sobota - Niedziela:</li>
+          <li class="list-group-item">Zamknięte</li>
+        </div>
+        <div class="card-footer">
+          <div class="d-flex justify-content-center"></div>
+        </div>
+      </div>
     </div>
   </div>
 </main>
