--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -29,6 +29,25 @@
 
   <main>
 <div class="container my-5">
+
+    <div>
+      <div th:if="${successMessage}" class="success-message">
+        <div class="card text-white bg-success mb-3 border-dark" style="max-width: 18rem;">
+          <div class="card-body">
+            <p th:text="${successMessage}"></p>
+          </div>
+        </div>
+      </div>
+
+      <div th:if="${errorMessage}" class="error-message">
+        <div class="card text-white bg-warning mb-3 border-dark" style="max-width: 18rem;">
+          <div class="card-body"
+          <p th:text="${errorMessage}"></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <div th:if="${session['username'] != null}" class="container my-5 justify-content-center">
       <div>
         <div class="card text-info bg-dark border-info h-100" style="width: 35rem">
