--- a/src/main/resources/templates/placeholder.html
+++ b/src/main/resources/templates/placeholder.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card text-info bg-warning border-info h-100">
-            <div class="card-header">
+            <div class="card-header d-flex justify-content-center">
                 What are you looking for here?
             </div>
             <img th:src="@{/img/placeholder.PNG}" class="card-img-top border-info border-3 rounded-3 p-3" alt="placeholder-img"/>
@@ -31,28 +31,33 @@
                 <p class="card-text">
                     Ta strona stanowi placeholder dla niezaimplementowanych lub nie gotowych elementów aplikacji.
                 </p>
-
-                <footer>
+            </div>
+                <div class="card-footer d-flex justify-content-center">
                     <a th:href="@{/}"
                     ><button type="button" class="btn btn-primary">
                         Wróć na Domu
                     </button></a>
-                </footer>
-            </div>
+                </div>
+
         </div>
             </div>
 
             <div class="col-md-8">
                 <div class="card bg-info text-warning border-warning h-100">
-                    <div class="card-header">
+                    <div class="card-header d-flex justify-content-center">
                         Monolog Skryby
                     </div>
                     <div class="card-body">
                         <blockquote class="blockquote mb-0">
                             <p class="lead">Jak to jest być skrybą, dobrze?</p>
                             <p class="lead">A, wie pan, moim zdaniem to nie ma tak, że dobrze, albo że niedobrze. Gdybym miał powiedzieć, co cenię w życiu najbardziej, powiedziałbym, że ludzi. Ludzi, którzy podali mi pomocną dłoń, kiedy sobie nie radziłem, kiedy byłem sam, i co ciekawe, to właśnie przypadkowe spotkania wpływają na nasze życie. Chodzi o to, że kiedy wyznaje się pewne wartości, nawet pozornie uniwersalne, bywa, że nie znajduje się zrozumienia, które by tak rzec, które pomaga się nam rozwijać. Ja miałem szczęście, by tak rzec, ponieważ je znalazłem, i dziękuję życiu! Dziękuję mu, życie to śpiew, życie to taniec, życie to miłość! Wielu ludzi pyta mnie o to samo: ale jak ty to robisz, skąd czerpiesz tę radość? A ja odpowiadam, że to proste! To umiłowanie życia. To właśnie ono sprawia, że dzisiaj na przykład buduję maszyny, a jutro – kto wie? Dlaczego by nie – oddam się pracy społecznej i będę, ot, choćby, sadzić... m— m-marchew...</p>
-                            <br>
-                            <footer class="blockquote-footer text-white">Otis ~ <cite title="Source Title">Asterix i Obelix - Misja Kleopatra ~ 2002</cite></footer>
+                        </blockquote>
+                    </div>
+                    <div class="card-footer d-flex justify-content-center">
+                        <blockquote>
+                            <footer class="blockquote-footer text-white">
+                                Otis ~ <cite title="Source Title">Asterix i Obelix - Misja Kleopatra ~ 2002</cite>
+                            </footer>
                         </blockquote>
                     </div>
                 </div>
